Image overlap fix

--- a/src/less/column.less
+++ b/src/less/column.less
@@ -69,6 +69,7 @@ body.upload-php .tablenav.top .cpac-edit {
 	background: transparent;
 	margin-right: 2px;
 	overflow: hidden;
+	max-width: 100%;
 }
 
 .rtl .cpac-column-value-image {
